[package]
name = "relay-tools"
version = "0.1.0"
edition = "2024"
description = "Collection of tools for the Relay"
publish = false

[[bin]]
name = "chainwalker"
path = "src/bin/chainwalker/main.rs"

[[bin]]
name = "stress"
path = "src/bin/stress/main.rs"

[[bin]]
name = "recast"
path = "src/bin/recast/mod.rs"

[dependencies]
alloy = { version = "1.0.42", features = [
    "std",
    "json-rpc",
    "providers",
    "reqwest-rustls-tls",
    "rpc-client",
    "rpc-types",
    "serde",
    "signers",
    "transports",
    "provider-ws",
    "essentials",
    "getrandom",
    "dyn-abi",
    "eip712",
    "eips",
    "k256",
    "provider-debug-api",
    "rlp",
    "rpc",
    "rpc-types-trace",
    "signer-local",
    "sol-types",
    "network",
    "signer-mnemonic",
    "signer-aws",
    "rand",
], default-features = false }
alloy-chains = "0.2.15"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
eyre = "0.6"
futures = "0.3"
futures-util = "0.3"
jsonrpsee = { version = "0.26", features = ["client", "client-core", "http-client"] }
rand = "0.9"
relay = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"